# servicio-api

./: .gitignore  README.md
app/: Cargo.toml  README.md
app/entity/: Cargo.toml
app/entity/src/: direccion.rs  heladera.rs  mod.rs  persona_vulnerable.rs  prelude.rs  ubicacion.rs
app/entity/src/repositories/: direcciones_repository.rs  heladeras_repository.rs  mod.rs  personas_vulnerables_repository.rs  ubicaciones_repository.rs
app/migration/: README.md
app/migration/src/: lib.rs  m20240913_225644_persona_vulnerable.rs  m20240913_225657_ubicacion.rs  m20240913_225704_direccion.rs  m20240917_121812_heladera.rs
app/src/: errors.rs  lib.rs  main.rs  state.rs
app/src/routes/: heladeras.rs  mod.rs  personas_vulnerables.rs  utils.rs
app/src/services/: georef.rs  mod.rs
app/tests/: common.rs  entry.rs  test_db.rs
app/tests/common/: mod.rs
app/tests/endpoints/: heladeras.rs  mod.rs  personas_vulnerables.rs  test_utils.rs
app/tests/repositories/: heladeras.rs  mod.rs  personas.rs
