[package]
name = "servicio-apiV2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
axum = "0.7.5"
chrono = "0.4.38"
futures = "0.3.30"
sea-orm = { version = "1.0.1", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
ureq = "2.10.1"
serde = "1.0.210"
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
