[package]
name = "servicio-apiV2"
version = "0.1.0"
edition = "2021"

[features]
local = []

[workspace]
members = [".", "entity", "migration"]

[workspace.dependencies]
sea-orm = { version = "1.0.1", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
uuid = { version = "1.10.0", features = ["v4"] }

[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
axum = { version = "0.7.5" }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = "0.4.38"
tokio = { version = "1.40.0", features = ["full"] }
ureq = { version = "2.10.1", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
axum-macros = "0.4.1"
dotenv = "0.15.0"
test-case = "3.3.1"
test-context = "0.3.0"
rstest = "0.22.0"
futures = "0.3.30"
axum-test = "16.0.0"
serial_test = { version = "3.1.1", features = ["file_locks"] }
